# acpu

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/: amx_opcode_scan.rs  amx_reverse.rs  amx_smoke.rs  bench1k.rs  bench_all.rs  bench_sgemm.rs  decompose.rs  diag_bench.rs  matmul.rs  neon_vs_amx.rs  overhead_test.rs  pair_load_test.rs  phase_time.rs  profile64.rs  profile_sgemm.rs  quick_bench.rs  quick_vs_accel.rs  single_vs_par.rs  thread_scale.rs  trace64.rs  trace_accel.rs
specs/: README.md  amx.md  instructions.md
src/: convert.rs  gemm.rs  lib.rs
src/gemm/: mod.rs  other.rs  parallel.rs  small.rs
src/matrix/: asm.rs  fma.rs  mod.rs  ops.rs  regs.rs  tile.rs  tile_f16.rs
src/numeric/: bf16.rs  complex.rs  fp16.rs  mod.rs  quant.rs
src/probe/: main.rs  mod.rs
src/pulse/: ffi.rs  mod.rs
src/sync/: affinity.rs  mod.rs  prefetch.rs
src/vector/: math.rs  mod.rs  reduce.rs  rope.rs  softmax.rs
tests/: integration.rs
