[package]
name = "acpu"
version = "0.1.0"
edition = "2021"
description = "pure Rust driver for Apple Silicon CPU compute — AMX, NEON, numeric extensions, sync, PMU"
license = "LicenseRef-Cyber"
repository = "https://github.com/cyberia-to/acpu"

[lib]
name = "acpu"
path = "src/lib.rs"

[[bin]]
name = "acpu_probe"
path = "src/probe/main.rs"

[[example]]
name = "matmul"
path = "examples/matmul.rs"

[[example]]
name = "bench_sgemm"
path = "examples/bench_sgemm.rs"

[profile.release]
lto = "thin"
codegen-units = 1
